--- a/src/auth/pages/usersInfo/userInfo.css
+++ b/src/auth/pages/usersInfo/userInfo.css
@@ -50,7 +50,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 30%;
+ 
 }
 
 .discriptiveTitle{
